fixed navbar on mobile

--- a/src/views/Home2Styles.sass
+++ b/src/views/Home2Styles.sass
@@ -357,7 +357,7 @@ $large-desktop: 1400px
     right: -100%
     top: 8rem
     background-color: #111111
-    width: 50%
+    width: 100%
     height: 100%
     transition: 500ms ease-out
     justify-content: flex-start
